# scipy_dae

./: .coveragerc  .gitignore  LICENSE.txt  README.md  Radau3_coeffs.py  ___setup.py  assimulo.solvers.radau5 — Assimulo 3.0 documentation.html  index.html  juliaRADAU.py  meson.build  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yml
PyDAE/: __init__.py  jay1993.py  jay1995.py  pendulum.py  robertson.py  van_der_pol.py
PyDAE/DASSL/dassl_v39/: CMakeLists.txt  license.txt
PyDAE/DASSL/dassl_v39/examples/: demo.c  demo2.c  demo_recall.c  demo_rt.c  pend.c  pend.mat
PyDAE/DASSL/dassl_v39/src/: dasslc.c  dasslc.h  dasslcmodule.c
PyDAE/Radau/C++/: IntegratorT.cpp  IntegratorT.h  NonStiffIntegratorT.cpp  NonStiffIntegratorT.h  README  StiffIntegratorT.cpp  StiffIntegratorT.h  decsol.cpp  decsol.h  main_original.cpp
PyDAE/Radau/fortran/: radau.f
PyDAE/_scipy/integrate/_dae/: __init__.py  base.py  bdf.py  common.py  dae.py  ode15i.py  ode15i_original.m  radau.py
PyDAE/_scipy/integrate/_ivp/: ivp.py
PyDAE/dae/: __init__.py  base.py  bdf.py  dae.py  euler.py  ode15i.py  radau copy.py  radau.py  radau_transformation.py  trbdf2.py
PyDAE/integrate/: __init__.py
PyDAE/integrate/_dae/: bdf.py  common.py  dae.py  radau.py
PyDAE/integrate/_ivp/: bdf.py  radau.py
benchmark/: Brenan_errors_IDA.csv  brenan.c  brenan.py  common.py  robertson.py
data/stl/: screwdriver.stl
examples/: BreneNortier.py  bouncing_ball.py  brenan1996.py  dzhanibekov.py  dzhanibekov.txt  eigenvalues.py  electrical_microgrid.py  electrical_microgrid_clean.py  heat_equation1D.py  heat_equation2D.py  incompressible_navier_stokes1D.py  incompressible_navier_stokes2D.py  incompressible_navier_stokes2D_mathworks.py  jay1993.py  jay1995.py  linear.py  navier_stokes_finite_differences.py  newton_polynomial.py  one_element_se3_rod.py  one_element_timoshenko_rod.py  particle_on_circular_track.py  pendulum.py  pipe_flow_new_ordering.py  pipe_flow_no_pressure.py  pipe_flow_no_pressure_matlab_ordering.py  recursive_pendulum.py  robertson.py  sparse_brusselator.py  stiff_transistor_amplifier.py  transistor_amplifier.py  van_der_pol.py  weissinger.py
examples/TODO/: bouncing_ball.py  jay1993.py
examples/daes/: akzo_nobel.py  andrews.py  andrews_DMS.py  arevalo.py  brenan.py  chaplygin_sleigh.py  circular_motion.py  driven_cavity.py  driven_cavity_new.py  gear.py  index2.py  jay.py  knife_edge.py  knife_edge.txt  kvaerno.py  one_element_timoshenko_rod.py  pendulum.py  pendulum_DMS.py  pendulum_DMS.txt  pendulum_DMS2.py  pendulum_DMS3.py  robertson.py  robertson_casadi.py  robertson_ida.py  robertson_odes.py  rolling_disk.py  stiff_transistor_amplifier.py  stiff_transistor_amplifier.txt  stiff_transistor_amplifier_Ebers_Moll.py
examples/daes/lithium-sulfur_batteries/: make_discharge.py  make_params.py  model.py  plot_data.py  run.py  slow_discharge.py
examples/ides/: clairaut.py  jackiewicz.py  kamke.py  kvaerno.py  weissinger.py
examples/odes/: dzhanibekov.py  one_element_SE3_rod.py  one_element_timoshenko_rod.py  se3_cosserat_rod.py  van_der_pol.py
pydaes/: __init__.py
pydaes/integrate/: __init__.py
pydaes/integrate/_dae/: __init__.py  base.py  bdf.py  common.py  dae.py  radau.py
pydaes/integrate/_dae/tests/: test_dae.py
scipy_dae/: meson.build
scipy_dae/integrate/: __init__.py  meson.build
scipy_dae/integrate/_dae/: base.py  bdf.py  common.py  dae.py  hermite.py  meson.build  pside.py  ptirk.py  radau.py  radau_ivp.py  ride.py  trbdf2.py  trbdf2_original.py
scipy_dae/integrate/_dae/benchmarks/: CMakeLists.txt  common.py  meson.build  run_benchmarks.py
scipy_dae/integrate/_dae/benchmarks/arevalo/: arevalo.c  arevalo.py  arevalo_errors_IDA.csv
scipy_dae/integrate/_dae/benchmarks/brenan/: brenan.c  brenan.py  brenan_errors_IDA.csv
scipy_dae/integrate/_dae/benchmarks/knife_edge/: knife_edge.c  knife_edge.py  knife_edge_errors_IDA.csv
scipy_dae/integrate/_dae/benchmarks/kvaerno/: kvaerno.py
scipy_dae/integrate/_dae/benchmarks/robertson/: robertson.c  robertson.py  robertson_errors_IDA.csv
scipy_dae/integrate/_dae/benchmarks/weissinger/: weissinger.c  weissinger.py  weissinger_errors_IDA.csv
scipy_dae/integrate/_dae/tests/: meson.build  test_check_arguments.py  test_consistent_initial_conditions.py  test_dae.py  test_events.py  test_integration_complex.py  test_integration_linear.py  test_integration_rational.py  test_integration_robertson.py
skdae/integrate/_dae/: base.py
test/: linear.py  pendulum.py  robertson.py  test_.py  test_dae.py  van_der_pol.py
