[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDAE"
version = "0.0.2"
authors = [
  { name="Jonas Breuling", email="jonas.breuling@inm.uni-stuttgart.de" },
]
description = "Python implementation of differential algebraic equation (DAE) solvers that should be added to scipy one day."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JonasBreuling/PyDAE"
Issues = "https://github.com/JonasBreuling/PyDAE/issues"