[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.16.0"]

[project]
name = "scipy_dae"
version = "0.0.4"
authors = [
  { name="Jonas Breuling", email="jonas.breuling@inm.uni-stuttgart.de" },
]
description = "Python implementation of solvers for differential algebraic equations (DAE's) and implicit differential equations (IDE's) that should be added to scipy one day."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24.4",
  "scipy>=1.10.1",
  "matplotlib>=3.4.3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
homepage = "https://github.com/JonasBreuling/scipy_dae"
documentaton = "https://github.com/JonasBreuling/scipy_dae"
source = "https://github.com/JonasBreuling/scipy_dae"
download = "https://github.com/JonasBreuling/scipy_dae/releases"
tracker = "https://github.com/JonasBreuling/scipy_dae/issues"
