py3.install_sources([
    '__init__.py',
    'test_check_arguments.py',
    'test_consistent_initial_conditions.py',
    'test_integration_complex.py',
    'test_integration_linear.py',
    'test_integration_rational.py',
    'test_integration_robertson.py',
    'test_events.py',
  ],
  subdir: 'scipy_dae/integrate/_dae/tests',
  install_tag: 'tests'
)